--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <h1>When it matters, say it on Forem</h1>
+      <h1>When it matters, say it on Forum</h1>
       <div class="inner-box">
         <div class="logo">FORUM</div>
         <h2>When it matters, say it on Forum</h2>
