--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>When it matters, say it on Forum</h2>
         <p>Forum is a platform for building modern, independent, and safe communities.</p>
         <p>
-          It powers <a href="https://notdev.to" target="_blank">notDEV</a> and other online communities which focus on deep, nuanced discussions. 
+          It powers <a href="https://notdev.to" target="_blank">notDEV</a> and which focus on deep ai, nuanced discussions. 
           Forums can be public or private, big or small.
         </p>
       </div>
